[package]
name = "line-dolphin"
version = "0.2.3"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
